# Hivexplore

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  Hivexplore.code-workspace  README.md  docker-compose.argos.yml  docker-compose.drone.yml  docker-compose.yml  hivexplore.code-workspace  start.sh
argos/: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  argos-devcontainer.json
argos/experiments/: hivexplore.argos  socket_event.h
argos/fleet-simulation/: CMakeLists.txt
argos/loop_functions/: CMakeLists.txt
argos/loop_functions/hivexplore_loop_functions/: CMakeLists.txt  hivexplore_loop_functions.cpp  hivexplore_loop_functions.h
argos/simulation/: .clang-format  CMakeLists.txt
argos/utils/: CMakeLists.txt  constants.h  log_name.cpp  log_name.h  log_name_event.cpp  log_name_event.h  param_name.cpp  param_name.h  param_name_event.cpp  param_name_event.h
client/: .dockerignore  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  README.md  package-lock.json  package.json  vue.config.js
client/public/: index.html
client/src/: App.vue  main.ts
drone/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build_info.json  requirements.txt
server/: .dockerignore  .flake8  .gitignore  .yapfignore  Dockerfile  Makefile  README.md  requirements.txt  setup.cfg
server/config/: crazyflies_config.json
server/logs/: .gitignore
server/requirements/: common.txt  dev.txt
server/server/: assign_crazyflie_address.py  change_crazyflie_address.py  config.py  connection_crazyflie.py  control_led.py  crazyflie_connection.py  (+11 more)
(+486 files in other folders)
